# building-telegram-bots

./: .gitignore  LICENSE.txt  README.md
01-ruby/: step0.rb  step1.rb  step1.sh  watch.rb  watch.sh
01-ruby-2/: Gemfile  hello.rb  run.sh  send.sh  send_async.rb  send_msg.rb  threads.rb
02-nim/: bot1  bot1.nim  bot2  bot2.nim  getsome  getsome.nim  goodmorning  goodmorning.nim  hello  hello.nim  mybot  myphotobot  myphotobot.nim  regexping  regexping.nim  searchbot  searchbot.nim  task.json
02-nim/nimcache/: bot1.c  bot1.json  bot2.c  bot2.json  getsome.c  getsome.json  goodmorning.c  goodmorning.json  hello.c  hello.json  mybot.c  mybot.json  myphotobot.c  myphotobot.json  regexping.c  regexping.json  searchbot.c  searchbot.json  stdlib_algorithm.c  stdlib_asyncdispatch.c  stdlib_asyncfile.c  stdlib_asyncfutures.c  stdlib_asyncnet.c  stdlib_asyncstreams.c  stdlib_base64.c  stdlib_cstrutils.c  stdlib_deques.c  stdlib_dynlib.c  stdlib_hashes.c  stdlib_heapqueue.c  stdlib_httpclient.c  stdlib_httpcore.c  stdlib_json.c  stdlib_kqueue.c  stdlib_lexbase.c  stdlib_lists.c  stdlib_logging.c  stdlib_macros.c  stdlib_math.c  (+30 more)
04-rust/bots/: Cargo.toml  test  test.rs
04-rust/bots/src/: bot1.rs  bot2.rs  bot4.rs
06-cplusplus/opencvdemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile.sh  opencvdemo
06-cplusplus/opencvdemo/src/: main.cpp
10-elixir/: fib.exs
12-python/: dice.py  fibo1.py  fibo2.py  fibo3.py  fibo4.py  fibo5.py  getMe.py  image.py  image_cv.py  image_cv2.py  sendI.py
12-python_tensorflow/: classify_image.py  image_tf.py
(+269 files in other folders)
